fix layout bug and add code

--- a/starter-template.css
+++ b/starter-template.css
@@ -1,70 +1,19 @@
 body {
-  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
   padding-top: 50px;
-  font-size: 18px;
 }
 
 .starter-template {
-  padding: 40px 15px 0px 15px;
-  text-align: center;
+padding: 40px 15px;
+text-align: center;
 }
 
-hr {
-  margin: 20px 0 20px 0;
-}
+hr { margin: 20px 0 20px 0; }
 
-img {
-  max-width: 100%;
-}
-
-/* ol,
-p,
-ul {
-  line-height: 1.7;
-} */
-ol,
-ul {
-  padding-left: 1.2em;
-}
-
-.navbar-brand {
-  font-size: 1.6em;
-  font-family: "Dancing Script", cursive;
-}
-
-.center-block {
-  width: 640px;
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-@media only screen and (min-width: 768px) {
-  table {
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
-  }
-
-  .container {
-    max-width: 888px;
-  }
-}
-
-@media only screen and (max-width: 719px) {
-  table {
-    width: 100%;
-    table-layout: fixed;
-  }
-}
-
-table,
-th,
-td {
-  padding: 5px;
-  border: 1px solid black;
+.center-block {  
+  width:640px;
+display: block;  
+margin-right: auto;  
+margin-left: auto;  
 }
 
 code[class*="language-"] {
